peering.tf
resource "aws_vpc_peering_connection" "default" {
count = var.is_peering_required ?1 :0 
peer_vpc_id = data.aws_vpc.default.id
vpc_id = aws_vpc.main.id

accepter {
allow_remote_vpc_dns_resolution = true
}

requester {
allow_remote_vpc_dns_resolution = true
}
auto_accept = true

tags = merge(local.common_tags,{
    Name = "Roboshop-peering"
})
}

resource "aws_route" "public_peering" {
    count= var.is_peering_required?1:0
  route_table_id            = aws_route_table.public.id
  destination_cidr_block    = data.aws_vpc.default.cidr_block
  gateway_id = aws_vpc_peering_connection.default[count.index].id
}

resource "aws_route" "private_peering" {
    count= var.is_peering_required?1:0
  route_table_id            = aws_route_table.private.id
  destination_cidr_block    = data.aws_vpc.default.cidr_block
  nat_gateway_id =  aws_vpc_peering_connection.default[count.index].id

}
resource "aws_route" "database_peering" {
     count= var.is_peering_required?1:0
  route_table_id            = aws_route_table.database.id
  destination_cidr_block    =  data.aws_vpc.default.cidr_block
  nat_gateway_id =aws_vpc_peering_connection.default[count.index].id
}

resource "aws_route" "default" {
count= var.is_peering_required ? 1 : 0
  route_table_id            =data.aws_route_table.default.id
  destination_cidr_block    =  var.cidr_block
  nat_gateway_id =aws_vpc_peering_connection.default[count.index].id
}
